# peywand

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  peywand.py  pyproject.toml  requirements-dev.txt  requirements.txt
doc/: README.md
pw/: __init__.py  bookmark.py  bookmark_view.py  db.py  models.py  search.py  services.py  tui.py  tui.tcss  util.py
pw/plugins/: __init__.py  csv_plugin.py  html_plugin.py  io.py  json_plugin.py  registry.py
tests/: .coveragerc  README.md  conftest.py  test_bookmark_view.py  test_db.py  test_peywand.py  test_services.py  test_tui.py  test_util.py
tests/plugins/: test_csv_plugin.py  test_html_plugin.py  test_json_plugin.py  test_registry.py
